# Copyright (c) 2022, NVIDIA CORPORATION.

[build-system]

requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "cugraph-dgl"
version = "23.04.00"
description = "cugraph wrappers around DGL"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "NVIDIA Corporation" },
]
license = { text = "Apache 2.0" }
requires-python = ">=3.8"
dependencies = [
    "cugraph",
    "numba>=0.56.2",
    "numpy",
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
]

[project.urls]
Homepage = "https://github.com/rapidsai/cugraph"
Documentation = "https://docs.rapids.ai/api/cugraph/stable/"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = [
    "cugraph_dgl*",
]
