# Copyright (c) 2022, NVIDIA CORPORATION.

[build-system]

requires = [
    "wheel",
    "setuptools",
    "cython>=0.29,<0.30",
    "scikit-build>=0.13.1",
    "cmake>=3.23.1,!=3.25.0",
    "ninja",
    "rmm==23.4.*",
    "pylibraft==23.4.*",
    "pylibcugraph==23.4.*",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["cugraph/tests"]
