# Copyright (c) 2022, NVIDIA CORPORATION.

[build-system]

requires = [
    "wheel",
    "setuptools",
    "cython>=0.29,<0.30",
    "scikit-build>=0.13.1",
    "cmake>=3.23.1,!=3.25.0",
    "versioneer",
    "ninja",
]
build-backend = "backend"
backend-path = ["_custom_build"]

[tool.black]
extend-exclude = "versioneer.py"
